<resources>

    <string name="title_app">CustomApp</string>
    <string name="desc_app">Description</string>

    <string name="title_login">Sign In</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_menu">Menu</string>

    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_change_pwd">Change Password</string>
    <string name="title_logout">Logout</string>

    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="clear_notification_msg">Are you sure you want to clear all notifications?</string>

    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Email / Phone</string>
    <string name="hint_password">Password</string>

    <string name="file_upload_size_error">File size is greater than 5 MB. Please upload file less than 5 MB.</string>

    <string name="empty_notifications_msg">Whoops! We couldn\'t find any notifications!</string>
    <string name="empty_username_msg">Username can\'t be empty!</string>
    <string name="empty_password_msg">Password can\'t be empty!</string>
    <string name="empty_phone_msg">Phone can\'t be empty!</string>
    <string name="empty_email_msg">Email can\'t be empty!</string>
    <string name="empty_name_msg">Name can\'t be empty!</string>

    <string name="invalid_name_msg">Invalid name!</string>
    <string name="invalid_phone_msg">Invalid phone!</string>
    <string name="invalid_email_msg">Invalid email!</string>
    <string name="invalid_username_msg">Invalid username!</string>
    <string name="invalid_password_msg">Password should be alpha numeric! (min 8 chars)</string>
    <string name="password_mismatch_msg">Password mismatch!</string>
    <string name="password_same_msg">Old &amp; new password can\'t be same!</string>

    <string name="forgot_password_msg">Forgot password?</string>
    <string name="signup_msg">Don\'t have an account? Contact Admin</string>
    <string name="contact_admin">Contact Admin</string>

</resources>