<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_menu_home"
            android:checked="true"
            android:orderInCategory="1"
            android:title="@string/title_home" />

    </group>

    <group android:id="@+id/setting">
        <item
            android:id="@+id/nav_menu_night"
            android:orderInCategory="5"
            android:title="Night mode"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

        <item
            android:id="@+id/nav_menu_settings"
            android:orderInCategory="6"
            android:title="@string/title_settings" />

        <item
            android:id="@+id/nav_menu_logout"
            android:orderInCategory="7"
            android:title="@string/title_logout" />
    </group>
</menu>